# CourseCopilot

./: README.md  docker-compose.yaml
background-job-service/: .env.sample  .gitignore  (+5 more)
python-backend/: main.py  pyproject.toml
python-backend/phase_1/: main.py  new_main.py
python-backend/phase_1/run1_tamil/: transcript_translated.json
python-backend/phase_1/run2/: output.srt  transcript_translated.json
python-backend/phase_1/run2_tamil/: output.srt  transcript_translated.json
python-backend/phase_1/utils/: combine_audio_video.py  transcribe.py  translate.py  tts.py
python-backend/references/: download.py  init_vertex.py  upload.py
python-backend/utils/: format_transcriptions.py  generate_srt.py  model_utils.py  synthesize_speech.py  timestamp_transcribe.py  tts_processor.py
video-processor/: .dockerignore  .gitignore  Readme.md  delete_mp_files.sh  pyproject.toml  requirements.txt  requirements_1.txt  todo.txt
video-processor/app/: .env  main.py
video-processor/app/runs/run1/: output.srt
video-processor/app/services/: combine_audio_video.py
video-processor/legacy/: fkedup_main.py  new_main.py
video-processor/phase_1/: .env  .env.example  main.py
video-processor/phase_1/run1/: ec0aaad7-bcb7-4d37-ad0d-11c465b4e6fa_1.json  transcript_translated.json
video-processor/phase_1/runs/run2_tamil/: transcript.json
video-processor/phase_1/temp/739a0b2a-fc1d-4bf8-9263-f07eb7ba08dc/: transcript_739a0b2a-fc1d-4bf8-9263-f07eb7ba08dc_1.mp4.json
video-processor/phase_1/temp/f1bb3532-a4a5-416f-be7e-65e2ee944098/: transcript_f1bb3532-a4a5-416f-be7e-65e2ee944098_2.mp4.json
video-processor/phase_1/utils/: combine_audio_video.py  generate_srt.py  output.srt  transcribe.py  transcript.json  transcript_translated.json  translate.py  tts.py
video-processor/references/: main.py
video-processor/references/utils/: combine_audio_video.py  synthesize_speech.py
video-processor/temp/dc2c6d26-b13a-4dc6-b657-a41fa34e59c3/: transcript_dc2c6d26-b13a-4dc6-b657-a41fa34e59c3_1.mp4.json
video-processor/temp/dc2c6d26-b13a-4dc6-b657-a41fa34e59c3/Tamil/: subtitle_Tamil_dc2c6d26-b13a-4dc6-b657-a41fa34e59c3_1.mp4.srt  transcript_Tamil_dc2c6d26-b13a-4dc6-b657-a41fa34e59c3_1.mp4.json
video-processor/utils/: text_transcribe.py  timestamp_transcribe.py
(+178 files in other folders)
