[project]
name = "python-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AagamChhajer",email = "aagamchhajer@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "boto3 (>=1.37.4,<2.0.0)",
    "botocore (>=1.37.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
