[project]
name = "video-processor"
version = "0.1.0"
description = ""
authors = [
    {name = "AagamChhajer",email = "aagamchhajer@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "boto3 (>=1.37.6,<2.0.0)",
    "botocore (>=1.37.6,<2.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "google-cloud-texttospeech (>=2.25.0,<3.0.0)",
    "vertexai (>=1.71.1,<2.0.0)",
    "whisper-timestamped (>=1.15.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
